# rg_gamelib

./: .gitignore  CMakeLists.txt  README.md  build.bat
.github/workflows/: cmake-macos.yml  cmake-win64_d3d12.yml  macos_metal-ci.yml  win64_d3d12-ci.yml
code/: core.cpp  core.h  dds.cpp  gfx.akiro  gfx.cpp  gfx.h  gfx_d3d12.cpp  gfx_dxc.cpp  gfx_dxc.h  gfx_mtl.mm  gfx_vk.cpp  hello_triangle.cpp  main.cpp  metal_utils.h  metal_utils.mm  metalcpp_implementation.cpp  rg.cpp  rg.h  rg_assetprocessor.cpp  rg_core.cpp  rg_core.h  rg_def_macrotypes.h  rg_gfx.cpp  rg_gfx.h  rg_gfx_d3d12.cpp  rg_gfx_dxc.cpp  rg_gfx_dxc.h  rg_gfx_dxc.inl  rg_gfx_mtl.cpp  rg_gfx_mtl.mm  rg_gfx_ogl.cpp  rg_gfx_rendercmd.cpp  rg_gfx_rendercmd.h  rg_gfx_sdl.cpp  rg_gfx_technic.cpp  rg_gfx_technic.h  rg_gfx_vk.cpp  rg_physic.cpp  rg_physic.h  rg_undef_macrotypes.h  (+5 more)
code/akiro/: lex.yy.cpp  main.l
code/game/: bee.cpp  game.h  skybox.h  smygel_main.cpp  textdraw.cpp  textdraw.h  treehouse_main.cpp  world.cpp  world.h
code/shaders/: basic.hlsl  common.hlsl  composite.hlsl  distortion.hlsl  fullscreenHDR.hlsl  grid.hlsl  pbr.hlsl  shadercommon.hlsl  shaderinterop_common.h  simple2d.hlsl  skybox.hlsl  tonemap.hlsl
code/shaders/metal/: basic.metal  histogram_shader.inl  imm.metal  imm_shader.inl  principledbrdf_shader.inl  simple2d_shader.inl
code/shaders/vulkan/: triangle.hlsl  vs_triangle.spirv
code/tools/: assetgen.cpp  rg_assetprocessor.cpp
data/: T.tga  generateEnvMap.bat  je_gray_02_2k_radiance.dds  je_gray_02_irradiance.dds  san_giuseppe_bridge_irradiance.dds  shaderball.xml  shaderball_test1.xml  shaderball_test2.xml  small_empty_room_1_irr.dds  test_arrow.aseprite
data/compiled/: spaceship.xml
data/fonts/: inconsolata_26.fnt  inconsolata_26_0.tga
data/shaders/dx12/: simple.hlsl  simple2d.hlsl
data/shaders/vulkan/: fs_triangle.spirv
